k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: arc
  labels:
    app.kubernetes.io/part-of: arc
