k8s/minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arc-minio
  namespace: arc
  labels:
    app.kubernetes.io/name: arc-minio
    app.kubernetes.io/part-of: arc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: arc-minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: arc-minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          args: ["server", "/data", "--console-address", ":9001"]
          ports:
            - name: api
              containerPort: 9000
              protocol: TCP
            - name: console
              containerPort: 9001
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: arc-minio-data
---
apiVersion: v1
kind: Service
metadata:
  name: arc-minio
  namespace: arc
spec:
  selector:
    app.kubernetes.io/name: arc-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
